# opengl_tmp_poc

./: .gitignore  CMakeLists.txt  README.adoc
src/: CMakeLists.txt  main.cpp
src/common/: datetime.hpp  functional.hpp  logging.hpp  mathex.hpp
src/examples/: viewer_2d.cpp  viewer_3d.cpp
src/ogl/: OglObjectBase.hpp  Program.hpp  Shader.hpp  Uniform.hpp  Utils.hpp  VertexArray.hpp  VertexAttribute.hpp  VertexBuffer.hpp  ogl.hpp
src/viewer/interfaces/: ICamera.hpp  IRendererContext.hpp  IRendererObject.hpp
src/viewer/render/: AxisRenderer.cpp  AxisRenderer.hpp  Camera.hpp  PlotRenderer.cpp  PlotRenderer.hpp  PointCloudRenderer.cpp  PointCloudRenderer.hpp  PolarGridRenderer.cpp  PolarGridRenderer.hpp  RendererBase.hpp  RendererContext.cpp  RendererContext.hpp  RendererTypes.hpp
src/viewer/render/primitives/: CubeRenderer.cpp  CubeRenderer.hpp
src/viewer/shaders/: GlslShaders.hpp  PlotFragmentShader.glsl  PlotVertexShader.glsl  PrimitiveFragmentShader.glsl  PrimitiveGeometryShader.glsl  PrimitiveVertexShader.glsl  SimpleFragmentShader.glsl  SimpleVertexShader.glsl  UniformFragmentShader.glsl  Vec4VertexShader.glsl
src/viewer/window/: InputControl.cpp  InputControl.hpp  InputControlHandlers.hpp  Window.cpp  Window.hpp
