cmake_minimum_required(VERSION 3.10)
project(opengl_wrapper)

set(CMAKE_VERBOSE_MAKEFILE ON)
set(THIRDPARTY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty)

set(CMAKE_VERBOSE_MAKEFILE ON)

#put all in one directory...
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

add_subdirectory(src)
